updated with content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,35 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-	
+	<header>
+		<h1>Society Education Program</h1>
+	</header>
+
+	<section class="wrapper">
+		<form class="program">
+			<select>
+				<option>Program Type</option>
+				<option id="search-program" value="search all">Search All</option>
+				<option id="scholarships" value="scholarships">Scholarship</option>
+				<option id="loans" value="loan programs">Loan Program</option>
+			</select>
+		</form>
+		<form class="education">
+		<select>
+			<option>Education Level</option>
+			<option id="search-education" value="search all">Search All</option>
+			<option id="kindergarten" value="scholarships">Kindergarten</option>
+			<option id="highschool" value="loan programs">High School</option>
+		</select>
+	</form>
+	<button>Search</button>
+	</section>
+
+	<section id="logos" class="logos">
+		<img src="images/aci-fade.png" alt="">
+		<img src="images/acm-fade.png" alt="">
+		<img src="images/AFE-fade.png" alt="">
+	</section>
 
 
 	<script src="node_modules/jQuery/dist/jQuery.min.js"></script>
