added more images

--- a/index.html
+++ b/index.html
@@ -31,9 +31,18 @@
 	</section>
 
 	<section id="logos" class="logos">
-		<img src="images/aci-fade.png" alt="">
-		<img src="images/acm-fade.png" alt="">
-		<img src="images/AFE-fade.png" alt="">
+		<img src="images/aci-fade.png" alt="aci">
+		<img src="images/acm-fade.png" alt="acm">
+		<img src="images/AFE-fade.png" alt="AFE">
+		<img src="images/aci-fade.png" alt="aci">
+		<img src="images/acm-fade.png" alt="acm">
+		<img src="images/AFE-fade.png" alt="AFE">
+		<img src="images/aci-fade.png" alt="aci">
+		<img src="images/acm-fade.png" alt="acm">
+		<img src="images/AFE-fade.png" alt="AFE">
+		<img src="images/aci-fade.png" alt="aci">
+		<img src="images/acm-fade.png" alt="acm">
+		<img src="images/AFE-fade.png" alt="AFE">
 	</section>
 
 
