--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
+
+	<div class="wrapper">
 	<header>
 		<h1>Society Education Program</h1>
 	</header>
 
-	<section class="wrapper">
-		<form>
+	<section class="search-area">
+		<form class="dropdown">
 			<select id="program">
 				<option>Program Type</option>
 				<option id="search-program" value="search all">Search All</option>
@@ -19,7 +21,7 @@
 				<option id="loans" value="loan programs">Loan Program</option>
 			</select>
 		</form>
-		<form>
+		<form class="dropdown">
 			<select id="education">
 				<option>Education Level</option>
 				<option id="search-education" value="search all">Search All</option>
@@ -66,6 +68,7 @@
 			</li>
 		</ul>
 	</section>
+	</div>
 
 	<script src="node_modules/jQuery/dist/jQuery.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>	
